--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Veltrix</string>
     <string name="title_activity_whatsapp_initiation">whatsappInitiation</string>
+    <string name="title_activity_xinitiation">xInitiation</string>
+    <string name="title_activity_instagram_initiation">instagramInitiation</string>
 </resources>
